tests/lifetime/path_borrower/move_struct_with_unfulfilled_field_ref_obligation_errors.err.expected
error: at 10:13: [INIT-MoveWithUnfulfilledContainedRef] In function 'f', block 'entry': cannot move 'b': contained reference 'b.p' has unfulfilled obligation (pointee is uninitialized, but must be initialized before the reference expires)
    |
 10 |             call take_box(move b);
    |             ^^^^^^^^^^^^^^^^^^^^^
  = note: reference declared here
    |
  5 |           b: RefBox;
    |           ^^^^^^^^^^
